--- a/in-memory-state/Cargo.toml
+++ b/in-memory-state/Cargo.toml
@@ -6,7 +6,7 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-reth-ethereum.workspace = true
+reth.workspace = true
 reth-exex.workspace = true
 reth-node-api.workspace = true
 reth-node-ethereum.workspace = true
