--- a/rollup/Cargo.toml
+++ b/rollup/Cargo.toml
@@ -33,7 +33,7 @@ tokio.workspace = true
 
 # misc
 eyre.workspace = true
-foundry-blob-explorers = "0.10"
+foundry-blob-explorers.workspace = true
 once_cell = "1"
 rusqlite = { version = "0.32", features = ["bundled"] }
 serde_json = "1"
