--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,26 +20,26 @@ publish = false
 
 [workspace.dependencies]
 # reth
-reth = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-ethereum = { git = "https://github.com/paradigmxyz/reth", branch = "main", features = ["full"] }
-reth-chainspec = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-discv5 = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-execution-types = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-exex = { git = "https://github.com/paradigmxyz/reth", branch = "main", features = ["serde"] }
-reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-evm = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-network = { git = "https://github.com/paradigmxyz/reth", branch = "main", features = ["test-utils"] }
-reth-network-api = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-network-peers = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-node-api = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-revm = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-tracing = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
+reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0", features = ["full"] }
+reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-discv5 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0", features = ["serde"] }
+reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0", features = ["test-utils"] }
+reth-network-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
 
 # alloy
 alloy-eips = { version = "0.12", default-features = false }
@@ -77,9 +77,9 @@ serde_json = "1"
 eyre = "0.6"
 
 # testing
-reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
-reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
+reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
+reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0" }
 
 
-[patch.crates-io]
-revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", rev = "667180b" }
+#[patch.crates-io]
+#revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", rev = "667180b" }
